# reddit-compiler

./: .gitignore  README.adoc  asset-manifest.json  index.html  manifest.json  precache-manifest.5b392582d3fd49466b8e26e9a2011d9a.js  service-worker.js
.github/workflows/: release.yaml
backend/: Dockerfile  Pipfile  deploy.sh  deployment-iam-policy.json  pyproject.toml  requirements.txt  samconfig.toml  template.yml
backend-go/: Dockerfile  Types.go  go.mod  hello.go  hello_test.go  http_helper.go
backend/app/: .env  main.py  runner.py
cdk-ts/: cdk.json  package-lock.json  package.json
cdk-ts/lib/: LambdaBackedApiGw.ts  RedditCompilerApi.ts  SingleContainerApi.ts
cdk-ts/test/: cdk-ts.test.ts
frontend/: .gitignore  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.css  App.test.tsx  App.tsx
frontend/src/adapters/: BackendAdapter.tsx
frontend/src/components/: AnchorUrl.test.tsx  AnchorUrl.tsx  ChapterList.test.tsx  ChapterList.tsx  ChapterListItem.tsx  DownloadContainer.tsx  FooterComponent.tsx  TrashIcon.test.tsx  TrashIcon.tsx
frontend/src/config/: config.ts
frontend/src/models/: bookResult.ts  chapter.ts  chapterOverview.ts  hTTPValidationError.ts  models.ts  validationError.ts
gateway-update-helper/: Dockerfile  update-gw.sh
static/css/: main.0e32679b.chunk.css  main.0e32679b.chunk.css.map
static/js/: 2.a754728e.chunk.js  main.ea15e06f.chunk.js  runtime-main.cf7a3b90.js
