[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Mirco Hacker <mirco.hacker@codecentric.de>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.62.0"
reddit2epub = "^0.5.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.13.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
